<resources>
    <string name="app_name">My Application</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_register">Registrarme</string>
    <string name="txt_email">Correo Electrónico</string>
    <string name="txt_password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="cuenta">¿Aún no tienes una cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_cuenta">Ya tengo una cuenta</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="datos">Datos</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>